Sign Here Please/objects/SignHereSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Height__c</fullName>
        <description>Height in pixels. If none specified full image size is used.</description>
        <inlineHelpText>Height in pixels. If none specified full image size is used.</inlineHelpText>
        <label>Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Logo_Image__c</fullName>
        <description>Url of the image to use for the logo in the Sign Here Application</description>
        <inlineHelpText>Url of the image to use for the logo in the Sign Here Application</inlineHelpText>
        <label>Organization Logo Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Role__c</fullName>
        <defaultValue>&apos;Primary&apos;</defaultValue>
        <description>The role type for the primary contact</description>
        <inlineHelpText>The role type for the primary contact</inlineHelpText>
        <label>Primary Contact Role</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <description>Width in pixels. If none specified full image size is used.</description>
        <inlineHelpText>Width in pixels. If none specified full image size is used.</inlineHelpText>
        <label>Width</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sign Here Settings</label>
</CustomObject>